--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": ">=5.6",
         "ext-json": "*",
         "keboola/storage-api-client": "^11.2|^12.1",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
         "symfony/validator": "^2.3|^3.4|^4.2|^5.0"
     },
     "require-dev": {
