--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
     stopOnFailure="false"
     bootstrap="vendor/autoload.php"
 >
-  <testsuite name="Tests">
-    <directory>tests/</directory>
+  <testsuite name="unit">
+    <directory>tests/Unit</directory>
   </testsuite>
 </phpunit>
