--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "keboola/storage-api-client": "^11.2|^12.1",
+        "keboola/storage-api-client": "^13.0",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "symfony/validator": "^2.3|^3.4|^4.2|^5.0"
     },
