--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "keboola/storage-api-client": "^13.0",
+        "keboola/storage-api-client": "^13.0|^14.0",
         "php-parallel-lint/php-parallel-lint": "^1.3",
         "symfony/validator": "^2.3|^3.4|^4.2|^5.0"
     },
@@ -47,6 +47,9 @@
     },
     "config": {
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
