--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,20 @@
 {
     "name": "keboola/billing-api-php-client",
+    "description": "PHP Client for Keboola Connection Billing API",
     "license": "MIT",
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
         "keboola/storage-api-client": "^13.0|^14.0",
-        "php-parallel-lint/php-parallel-lint": "^1.3",
-        "symfony/validator": "^2.3|^3.4|^4.2|^5.0"
+        "symfony/validator": "^5.0|^6.0"
     },
     "require-dev": {
-        "keboola/coding-standard": "^13.0",
-        "phpstan/phpstan": "^0.12.98",
-        "phpunit/phpunit": "^5.7",
-        "squizlabs/php_codesniffer": "^3.6"
+        "keboola/coding-standard": ">=14.0",
+        "phpstan/phpstan": "^1.8",
+        "phpstan/phpstan-phpunit": "^1.1",
+        "phpstan/phpstan-symfony": "^1.2",
+        "phpunit/phpunit": "^9.5",
+        "sempro/phpunit-pretty-print": "^1.4"
     },
     "autoload": {
         "psr-4": {
@@ -25,29 +27,24 @@
         }
     },
     "scripts": {
-        "tests-unit": "phpunit --colors=always --testsuite unit",
-        "tests": [
-            "@tests-unit",
-            "@tests-functional"
-        ],
-        "phpstan": "phpstan analyse --no-progress -c phpstan.neon",
-        "phpcs": "phpcs -n --ignore=vendor --extensions=php .",
-        "phpcbf": "phpcbf -n --ignore=vendor --extensions=php .",
-        "phplint": "parallel-lint -j 10 --exclude vendor .",
+        "tests": "phpunit --coverage-clover build/logs/clover.xml --coverage-xml=build/logs/coverage-xml --log-junit=build/logs/phpunit.junit.xml",
+        "phpstan": "phpstan analyse --no-progress --level=max src tests -c phpstan.neon",
+        "phpcs": "phpcs --extensions=php src tests",
+        "phpcbf": "phpcbf --extensions=php src tests",
         "build": [
-            "@phplint",
             "@phpcs",
             "@phpstan",
-            "@tests-unit"
+            "@tests"
         ],
         "ci": [
-            "@composer validate --no-check-publish --no-check-all",
+            "@composer validate --no-check-all --strict",
             "@build"
         ]
     },
     "config": {
         "sort-packages": true,
         "optimize-autoloader": true,
+        "lock": false,
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
