--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,6 +11,7 @@
     processIsolation="false"
     stopOnFailure="false"
     bootstrap="vendor/autoload.php"
+    printerClass="Sempro\PHPUnitPrettyPrinter\PrettyPrinterForPhpUnit9"
 >
   <testsuite name="unit">
     <directory>tests/Unit</directory>
