fix: Replace deprecated checkMissingIterableValueType Phpstan config

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,11 +1,12 @@
 parameters:
     level: max
-    checkMissingIterableValueType: false
     paths:
         - src
         - tests
     stubFiles:
         - tests/stubs/Guzzle.stub
+    ignoreErrors:
+        - identifier: missingType.iterableValue
 
 includes:
     - vendor/phpstan/phpstan-phpunit/extension.neon
